[project]
name = "akkudoktor-eos"
version = "0.0.1"
authors = [
  { name="Andreas Schmitz", email="author@example.com" },
]
description = "This project provides a comprehensive solution for simulating and optimizing an energy system based on renewable energy sources. With a focus on photovoltaic (PV) systems, battery storage (batteries), load management (consumer requirements), heat pumps, electric vehicles, and consideration of electricity price data, this system enables forecasting and optimization of energy flow and costs over a specified period."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Akkudoktor-EOS/EOS"
Issues = "https://github.com/Akkudoktor-EOS/EOS/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.packages.find]
where = ["src/"]
include = ["akkudoktoreos", "akkudoktoreosserver", ]

[tool.setuptools.package-data]
akkudoktoreosserver = ["data/*.npz", ]

[tool.pyright]
# used in Pylance extension for language server
# type check is done by mypy, disable to avoid unwanted errors
typeCheckingMode = "off"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "F841",  # don't complain about unused variables
]

[tool.pytest.ini_options]
minversion = "8.3.3"
pythonpath = [ "src", ]
testpaths = [ "tests", ]
