[project]
name = "akkudoktor-eos"
version = "0.0.1"
authors = [
  { name="Andreas Schmitz", email="author@example.com" },
]
description = "This project provides a comprehensive solution for simulating and optimizing an energy system based on renewable energy sources. With a focus on photovoltaic (PV) systems, battery storage (batteries), load management (consumer requirements), heat pumps, electric vehicles, and consideration of electricity price data, this system enables forecasting and optimization of energy flow and costs over a specified period."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Akkudoktor-EOS/EOS"
Issues = "https://github.com/Akkudoktor-EOS/EOS/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.packages.find]
where = ["src/"]
include = ["akkudoktoreos"]

[tool.setuptools.package-data]
akkudoktoreos = ["*.json", "data/*.npz", ]

[tool.pyright]
# used in Pylance extension for language server
# type check is done by mypy, disable to avoid unwanted errors
typeCheckingMode = "off"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",      # Enable all `Pyflakes` rules.
    "D",      # Enable all `pydocstyle` rules, limiting to those that adhere to the
              # Google convention via `convention = "google"`, below.
]
ignore = [
   # Prevent errors due to ruff false positives
   # ------------------------------------------
   # On top of `Pyflakes (F)` to allow numpydantic Shape forward annotation
   "F722",    # forward-annotation-syntax-error: forward annotations that include invalid syntax.

    # Prevent errors for existing sources. Should be removed!!!
    # ---------------------------------------------------------
    # On top of `Pyflakes (F)`
    "F841",   # unused-variable: Local variable {name} is assigned to but never used
    # On top of `pydocstyle (D)`
    "D100",   # undocumented-public-module: Missing docstring in public module
    "D101",   # undocumented-public-class: Missing docstring in public class
    "D102",   # undocumented-public-method: Missing docstring in public method
    "D103",   # undocumented-public-function: Missing docstring in public function
    "D104",   # undocumented-public-package: Missing docstring in public package
    "D105",   # undocumented-magic-method: Missing docstring in magic method
    "D106",   # undocumented-public-nested-class: Missing docstring in public nested class
    "D107",   # undocumented-public-init: Missing docstring in __init__
    "D417",   # undocumented-param: Missing argument description in the docstring for {definition}: {name}
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "8.3.3"
pythonpath = [ "src", ]
testpaths = [ "tests", ]

[tool.mypy]
files = ["src", "tests"]
exclude = "class_soc_calc\\.py$"
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "akkudoktoreos.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deap.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xprocess.*"
ignore_missing_imports = true
