[project]
name = "akkudoktor-eos"
dynamic = ["version"] # Get version information dynamically
authors = [
  { name="Andreas Schmitz", email="author@example.com" },
]
description = "This project provides a comprehensive solution for simulating and optimizing an energy system based on renewable energy sources. With a focus on photovoltaic (PV) systems, battery storage (batteries), load management (consumer requirements), heat pumps, electric vehicles, and consideration of electricity price data, this system enables forecasting and optimization of energy flow and costs over a specified period."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "babel==2.18.0",
    "beautifulsoup4==4.14.3",
    "cachebox==5.2.2",
    "numpy==2.4.2",
    "numpydantic==1.7.0",
    "matplotlib==3.10.8",
    "contourpy==1.3.3",
    "fastapi[standard-no-fastapi-cloud-cli]==0.132.0",
    "fastapi_cli==0.0.24",
    "rich-toolkit==0.19.4",
    "python-fasthtml==0.12.47",
    "MonsterUI==1.0.44",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "bokeh==3.8.2",
    "uvicorn==0.41.0",
    "scipy==1.17.0",
    "tzfpy==1.1.1",
    "deap==1.4.3",
    "requests==2.32.5",
    "pandas==3.0.1",
    "pendulum==3.2.0",
    "platformdirs==4.9.2",
    "psutil==7.2.2",
    "pvlib==0.15.0",
    "pydantic==2.12.5",
    "pydantic_extra_types==2.11.0",
    "statsmodels==0.14.6",
    "pydantic-settings==2.13.1",
    "linkify-it-py==2.0.3",
    "loguru==0.7.3",
    "lmdb==1.7.5",
]

[project.optional-dependencies]
dev = [
    # Pre-commit framework - basic package requirements handled by pre-commit itself
    # - pre-commit-hooks
    # - isort
    # - ruff
    # - mypy (mirrors-mypy) - sync with requirements-dev.txt (if on pypi)
    # - pymarkdown
    # - commitizen - sync with requirements-dev.txt (if on pypi)
    #
    # !!! Sync .pre-commit-config.yaml with these dependencies !!!
    "pre-commit==4.5.1",
    "mypy==1.19.1",
    "types-requests==2.32.4.20260107", # for mypy
    "pandas-stubs==3.0.0.260204", # for mypy
    "tokenize-rt==6.2.0", # for mypy
    "types-docutils==0.22.3.20251115", # for mypy
    "types-PyYaml==6.0.12.20250915", # for mypy
    "commitizen==4.13.8",
    "deprecated==1.3.1", # for commitizen

    # Sphinx
    "sphinx==9.0.4",
    "sphinx_rtd_theme==3.1.0",
    "sphinx-tabs==3.4.7",
    "GitPython==3.1.46",
    "myst-parser==5.0.0",
    "docutils==0.21.2",

    # Pytest
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-xprocess==1.0.2",
    "coverage==7.13.4",
]

[project.urls]
Homepage = "https://github.com/Akkudoktor-EOS/EOS"
Issues = "https://github.com/Akkudoktor-EOS/EOS/issues"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
# version.txt must be generated
version = { file = "version.txt" }

[tool.setuptools.packages.find]
where = ["src/"]
include = ["akkudoktoreos"]

[tool.setuptools.package-data]
akkudoktoreos = ["*.json", "data/*.npz", ]

[tool.pyright]
# used in Pylance extension for language server
# type check is done by mypy, disable to avoid unwanted errors
typeCheckingMode = "off"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
exclude = [
    "tests",
    "scripts",
]
output-format = "full"

[tool.ruff.lint]
select = [
    "F",      # Enable all `Pyflakes` rules.
    "D",      # Enable all `pydocstyle` rules, limiting to those that adhere to the
              # Google convention via `convention = "google"`, below.
    "S",      # Enable all `flake8-bandit` rules.
]
ignore = [
   # Prevent errors due to ruff false positives
   # ------------------------------------------
   # On top of `Pyflakes (F)` to allow numpydantic Shape forward annotation
   "F722",    # forward-annotation-syntax-error: forward annotations that include invalid syntax.

    # Prevent errors for existing sources. Should be removed!!!
    # ---------------------------------------------------------
    # On top of `Pyflakes (F)`
    "F841",   # unused-variable: Local variable {name} is assigned to but never used
    # On top of `pydocstyle (D)`
    "D100",   # undocumented-public-module: Missing docstring in public module
    "D101",   # undocumented-public-class: Missing docstring in public class
    "D102",   # undocumented-public-method: Missing docstring in public method
    "D103",   # undocumented-public-function: Missing docstring in public function
    "D104",   # undocumented-public-package: Missing docstring in public package
    "D105",   # undocumented-magic-method: Missing docstring in magic method
    "D106",   # undocumented-public-nested-class: Missing docstring in public nested class
    "D107",   # undocumented-public-init: Missing docstring in __init__
    "D417",   # undocumented-param: Missing argument description in the docstring for {definition}: {name}
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "8.3.3"
pythonpath = [ "src", ]
testpaths = [ "tests", ]
markers = [
    "docker: marks tests that require a local Docker engine"
]

[tool.mypy]
mypy_path= "src"
files = ["src", "tests"]
exclude = "class_soc_calc\\.py$"
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "akkudoktoreos.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deap.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xprocess.*"
ignore_missing_imports = true

[tool.commitizen]
# Only used as linter
name = "cz_conventional_commits"
version_scheme = "semver"

# Enforce commit message and branch style:
branch_validation = true
branch_pattern = "^(feat|fix|chore|docs|refactor|test)/[a-z0-9._-]+$"
